Add title style.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <title>HAPPY BIRTHDAY MYMOS</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <link rel="stylesheet" href="./index.css"/>
+    <link rel="stylesheet" href="./main.css"/>
 </head>
 <body>
-    <h1>HAPPY BIRTHDAY MYMOS</h1>
-    <a class="mika-link" href="./mika.html">Un petit message de Mika</a>
+    <div class="main">
+        <div class="center">
+            <h1 class="title">HAPPY BIRTHDAY MYMOS</h1>
+        </div>
+        <a class="mika-link" href="./mika.html">Un petit message de la part de Mika</a>
+    </div>
 </body>
 </html>
