Add funky link.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <h1 class="title">HAPPY BIRTHDAY MYMOS</h1>
         </div>
         <a class="mika-link" href="./mika.html">Un petit message de la part de Mika</a>
+        <div class="blague-container">
+            <a class="blague-link" href="blague.html">Click</a>
+        </div>
     </div>
 </body>
 </html>
