Make joke page.

--- a/blague.html
+++ b/blague.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UNE SUPER BLAGUE</title>
+    <link href="./blague.css" rel="stylesheet"/>
 </head>
 <body>
-    TAAAHAHA Y'A RIEN A GAGNER!!!
+    <p>TAAAHAHA Y'A RIEN A GAGNER</p>
+    <img class="" src="./images/trollface.png" alt="HEHEHE">
 </body>
 </html>
