--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="center">
             <h1 class="title">HAPPY BIRTHDAY MYMOS</h1>
         </div>
+        <p>Salut, c'est <u>Bouliney</u>, éditeur en chef du numéro spécial: anniversaire de la petite. C'est un jour vraiment spécial ajourd'hui, la Moyte se doit de fêter ça en beauté!</p>
         <a class="mika-link" href="./mika.html">Un petit message de la part de Mika</a>
         <div class="blague-container">
             <a class="blague-link" href="blague.html">Click</a>
