Add maman angry.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
         <div class="blague-container">
             <a class="blague-link" href="blague.html"><img width="80" src="./images/cadeau.png" alt="cadeau"></a>
         </div>
+
+        <div class="alex-container">
+            <div>
+                <p>Alex en train de faire ce site alors qu'il devrait bosser sur ses exams:</p>
+                <img class="alex-photo" src="./images/alex-photo.jpg" alt="alex"/>
+            </div>
+            <div>
+                <p>Maman:</p>
+                <br>
+                <img class="alex-photo" src="./images/angry-maman.gif" alt="maman enervee"/>
+            </div>
+        </div>
     </div>
 </body>
 </html>
