--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
         <div class="blague-container">
             <a class="blague-link" href="blague.html"><img width="80" src="./images/cadeau.png" alt="cadeau"></a>
         </div>
-
+        <div class="jolypote-jardin">
+            <h2>Le petit jardin de Jolypote</h2>
+            <p>Salut, c'est Jolypote. Viens, je te fais la visite de mon petit jardin.</p>
+            <p>Elles sont jolies mes salades hein !</p>
+            <img src="./images/salade-potager.jpg" alt="salade">
+            <p>Et t'as vu la taille des carottes ? Magnifique!</p>
+            <img src="./images/carotte-potager.jpg" alt="carotte">
+            <p>J'ai même des ananas qui sont en train de pousser dans ce coin.</p>
+            <img src="./images/ananas.jpg" alt="ananas">
+            <p>Viens par ici maintenant, je te montre mes fleurs!</p>
+            <img src="./images/fleurs.jpg" alt="fleurs">
+            <p>La visite est terminée.</p>
+        </div>
         <div class="alex-container">
             <div>
                 <p>Alex en train de faire ce site alors qu'il devrait bosser sur ses exams:</p>
