Add Tetris Moyte.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <img src="./images/fleurs.jpg" alt="fleurs">
             <p>La visite est terminée.</p>
         </div>
+        <a href="./tetris.html">JOUE A TETRIS MOYTE</a>
         <div class="alex-container">
             <div>
                 <p>Alex en train de faire ce site alors qu'il devrait bosser sur ses exams:</p>
