--- a/mika.html
+++ b/mika.html
@@ -17,10 +17,34 @@
                 <p class="mika-message">Salut Emily, c'est le vrai Mika! Je voulais te souhaiter personellement un super bon anniversaire!<br><br>Allez, A+ dans l'autobus!</p>
             </div>
             <div>
-                <img class="mika-img" src="./images/mika.webp" alt="C'est le vrai Mika!"/>
+                <img id='mika' class="mika-img" src="./images/mika.webp" alt="C'est le vrai Mika!"/>
+                <img id='thost' src="./images/thost.png" style="display:none"/>
+                <img id='dark-thost' src="./images/dark-thost.png" style="display:none"/>
                 <div class="center">Le vrai Mika</div>
             </div>
         </div>
     </div>
+    <script>
+        (async () => {
+            await new Promise(r => setTimeout(r, 500));
+            const mika = document.querySelector('#mika');
+            const thost = document.querySelector('#thost');
+            const darkThost = document.querySelector('#dark-thost');
+            const mikaBB = mika.getBoundingClientRect();
+            for (const t of [thost, darkThost]) {
+                t.style.position = 'absolute';
+                t.style.left = `${mikaBB.left + mikaBB.width * 0.43}px`;
+                t.style.top = `${mikaBB.top + mikaBB.height * 0.05}px`;
+                t.style.width = t.style.height = `${mikaBB.width * 0.3}px`;
+            }
+            while (true) {
+                await new Promise(r => setTimeout(r, Math.random() * 3000 + 1000));
+                const whichThost = [thost, darkThost][Math.random() < 0.8 ? 0 : 1];
+                whichThost.style.display = null;
+                await new Promise(r => setTimeout(r, Math.random() < 0.1 ? 600 : 60));
+                whichThost.style.display = 'none';
+            }
+        })();
+    </script>
 </body>
 </html>
