Add image of mymos looking at the website

--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
                 <br>
                 <img class="alex-photo" src="./images/angry-maman.gif" alt="maman enervee"/>
             </div>
+            <div id="webcam-photo-container" style="display:none">
+                <p>Toi, en train de regarder ce site:</p>
+                <br/>
+                <img id="webcam-photo">
+            </div>
         </div>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
