--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <link rel="stylesheet" href="./index.css"/>
     <link rel="stylesheet" href="./main.css"/>
+    
+    <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+    <script type="importmap">
+        {
+            "imports": {
+                "three": "https://unpkg.com/three/build/three.module.js",
+                "three/addons/": "https://unpkg.com/three/examples/jsm/"
+            }
+        }
+    </script>
 </head>
 <body>
     <div class="main">
@@ -31,6 +41,7 @@
             <p>Viens par ici maintenant, je te montre mes fleurs!</p>
             <img src="./images/fleurs.jpg" alt="fleurs">
             <p>La visite est terminée.</p>
+            <canvas id="thostu"></canvas>
         </div>
         <a href="./tetris.html">JOUE A TETRIS MOYTE</a>
         <div class="alex-container">
@@ -50,6 +61,6 @@
             </div>
         </div>
     </div>
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
 </body>
 </html>
