Improve design petit jardin.

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
             <a class="blague-link" href="blague.html"><img width="80" src="./images/cadeau.png" alt="cadeau"></a>
         </div>
         <div class="jolypote-jardin">
-            <h2>Le petit jardin de Jolypote</h2>
-            <p>Salut, c'est Jolypote. Viens, je te fais la visite de mon petit jardin.</p>
-            <p>Elles sont jolies mes salades hein !</p>
+            <h2 class="jolypote-jardin-text">Le petit jardin de Jolypote</h2>
+            <p class="jolypote-jardin-text">Salut, c'est Jolypote. Viens, je te fais la visite de mon petit jardin.</p>
+            <p class="jolypote-jardin-text">Elles sont jolies mes salades hein !</p>
             <img src="./images/salade-potager.jpg" alt="salade">
-            <p>Et t'as vu la taille des carottes ? Magnifique!</p>
+            <p class="jolypote-jardin-text">Et t'as vu la taille des carottes ? Magnifique!</p>
             <img src="./images/carotte-potager.jpg" alt="carotte">
-            <p>J'ai même des ananas qui sont en train de pousser dans ce coin.</p>
+            <p class="jolypote-jardin-text">J'ai même des ananas qui sont en train de pousser dans ce coin.</p>
             <img src="./images/ananas.jpg" alt="ananas">
-            <p>Viens par ici maintenant, je te montre mes fleurs!</p>
+            <p class="jolypote-jardin-text">Viens par ici maintenant, je te montre mes fleurs!</p>
             <img src="./images/fleurs.jpg" alt="fleurs">
-            <p>La visite est terminée.</p>
-            <canvas id="thostu"></canvas>
+            <p class="jolypote-jardin-text">La visite est terminée.</p>
         </div>
+        <canvas id="thostu"></canvas>
         <a href="./tetris.html">JOUE A TETRIS MOYTE</a>
         <div class="alex-container">
             <div>
