--- a/blague.html
+++ b/blague.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <p>TAAAHAHA Y'A RIEN A GAGNER</p>
-    <img class="" src="./images/trollface.png" alt="HEHEHE">
+    <img class="img" src="./images/trollface.png" alt="HEHEHE">
 </body>
 </html>
