--- a/index.html
+++ b/index.html
@@ -29,20 +29,33 @@
         <div class="blague-container">
             <a class="blague-link" href="blague.html"><img width="80" src="./images/cadeau.png" alt="cadeau"></a>
         </div>
-        <div class="jolypote-jardin">
-            <h2 class="jolypote-jardin-text">Le petit jardin de Jolypote</h2>
-            <p class="jolypote-jardin-text">Salut, c'est Jolypote. Viens, je te fais la visite de mon petit jardin.</p>
-            <p class="jolypote-jardin-text">Elles sont jolies mes salades hein !</p>
-            <img src="./images/salade-potager.jpg" alt="salade">
-            <p class="jolypote-jardin-text">Et t'as vu la taille des carottes ? Magnifique!</p>
-            <img src="./images/carotte-potager.jpg" alt="carotte">
-            <p class="jolypote-jardin-text">J'ai même des ananas qui sont en train de pousser dans ce coin.</p>
-            <img src="./images/ananas.jpg" alt="ananas">
-            <p class="jolypote-jardin-text">Viens par ici maintenant, je te montre mes fleurs!</p>
-            <img src="./images/fleurs.jpg" alt="fleurs">
-            <p class="jolypote-jardin-text">La visite est terminée.</p>
+        <div class="rows">
+            <div class="jolypote-jardin">
+                <h2 class="jolypote-jardin-text">Le petit jardin de Jolypote</h2>
+                <p class="jolypote-jardin-text">Salut, c'est Jolypote. Viens, je te fais la visite de mon petit jardin.</p>
+                <p class="jolypote-jardin-text">Elles sont jolies mes salades hein !</p>
+                <img src="./images/salade-potager.jpg" alt="salade">
+                <p class="jolypote-jardin-text">Et t'as vu la taille des carottes ? Magnifique!</p>
+                <img src="./images/carotte-potager.jpg" alt="carotte">
+                <p class="jolypote-jardin-text">J'ai même des ananas qui sont en train de pousser dans ce coin.</p>
+                <img src="./images/ananas.jpg" alt="ananas">
+                <p class="jolypote-jardin-text">Viens par ici maintenant, je te montre mes fleurs!</p>
+                <img src="./images/fleurs.jpg" alt="fleurs">
+                <p class="jolypote-jardin-text">La visite est terminée.</p>
+            </div>
+            <div class="news">
+                <div class="weather">
+                    <h2>QUEL TEMPS FAIT-IL A LA MOYTE?</h2>
+                    <span class="author">Par Jean-Paul-Moyte</span>
+                    <br>
+                    <img src="./images/la-moyte.JPG" alt="la moyte"/>
+                    <p>
+                        Il fait assez beau, quelques petites eclaircies par-ci par la.
+                    </p>
+                </div>
+            </div>
         </div>
-        <canvas id="thostu"></canvas>
+            <canvas id="thostu"></canvas>
         <a href="./tetris.html">JOUE A TETRIS MOYTE</a>
         <div class="alex-container">
             <div>
