Add jolyney se prelasse.

--- a/index.html
+++ b/index.html
@@ -44,14 +44,17 @@
                 <p class="jolypote-jardin-text">La visite est terminée.</p>
             </div>
             <div class="news">
-                <div class="weather">
+                <div class="weather news-card">
                     <h2>QUEL TEMPS FAIT-IL A LA MOYTE?</h2>
                     <span class="author">Par Jean-Paul-Moyte</span>
-                    <br>
-                    <img src="./images/la-moyte.JPG" alt="la moyte"/>
+                    <img class="small-img" src="./images/la-moyte.JPG" alt="la moyte"/>
                     <p>
-                        Il fait assez beau, quelques petites eclaircies par-ci par la.
+                        Il fait assez beau, quelques petites éclaircies par-ci par là.
                     </p>
+                </div>
+                <div class="plage news-card">
+                    <h2>Jolyney se prélasse</h2>
+                    <img class="small-img" src="./images/jolyney-plage.webp" alt="jolyney plage"/>
                 </div>
             </div>
         </div>
