Add special image that changes on hover.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                 <div class="weather news-card">
                     <h2>QUEL TEMPS FAIT-IL A LA MOYTE?</h2>
                     <span class="author">Par Jean-Paul-Moyte</span>
-                    <img class="small-img" src="./images/la-moyte.JPG" alt="la moyte"/>
+                    <div class="text-center">
+                        <img class="small-img" src="./images/la-moyte.JPG" alt="la moyte"/>
+                    </div>
                     <p>
                         Il fait assez beau, quelques petites éclaircies par-ci par là.
                     </p>
@@ -58,7 +60,11 @@
                 </div>
             </div>
         </div>
-            <canvas id="thostu"></canvas>
+        <canvas id="thostu"></canvas>
+        <div class="foufou">
+            <span class="img-text-1">Heuu qu'est ce qu'ils font?</span>
+            <span class="img-text-2">ARGH!</span>
+        </div>
         <a href="./tetris.html">JOUE A TETRIS MOYTE</a>
         <div class="alex-container">
             <div>
