Add Iolynei a la playa

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
                     <h2>Jolyney se prélasse</h2>
                     <img class="small-img" src="./images/jolyney-plage.webp" alt="jolyney plage"/>
                 </div>
+                <div class="plage-iolynei news-card">
+                    <h2>Iolynei se prélasse</h2>
+                    <img class="small-img" src="./images/iolynei-plage.png" alt="iolynei plage"/>
+                </div>
             </div>
         </div>
         <canvas id="thostu"></canvas>
