Add live weather webcam

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     <p>
                         Il fait assez beau, quelques petites éclaircies par-ci par là.
                     </p>
+                    <a href="./weather-webcam.html">Pour voir plus de détails, notre webcam filme les conditions météos de la Moyte en temps réel; cliquez ici!</a>
                 </div>
                 <div class="plage news-card">
                     <h2>Jolyney se prélasse</h2>
