Add jean paul moyte.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             </div>
             <div class="news">
                 <div class="weather news-card">
+                    <div class="jean-paul-moyte"><img src="./images/jean-paul-moyte.png" alt=""></div>
                     <h2>QUEL TEMPS FAIT-IL A LA MOYTE?</h2>
                     <span class="author">Par Jean-Paul-Moyte</span>
                     <div class="text-center">
