Add thostu's collection

--- a/index.html
+++ b/index.html
@@ -71,6 +71,20 @@
             <span class="img-text-1">Heuu qu'est ce qu'ils font?</span>
             <span class="img-text-2">ARGH!</span>
         </div>
+        <div class="collection-du-ptit-ney">
+            <h2>La collection du ptit ney!</h2>
+            <button onclick="showCollection(); this.remove();">Clique ici pour voir ma toute nouvelle collection de pokémon.</button>
+            <canvas id="collection" width="900" height="0"></canvas>
+            <div id="collection-text" style="display:none">
+                <p>Bon il m'en manque deux ou trois, te fous pas de ma gueule...</p>
+                <p>Ok j'avoue y'en a certains que j'ai volés...</p>
+                <p>...</p>
+                <p>...</p>
+                <p>...</p>
+                <p>PIKACHU ATTAQUE TONNERRE!</p>
+                <p><i>[ mais cela échoue... ]</i></p>
+            </div>
+        </div>
         <a href="./tetris.html">JOUE A TETRIS MOYTE</a>
         <div class="alex-container">
             <div>
@@ -90,5 +104,6 @@
         </div>
     </div>
     <script src="main.js" type="module"></script>
+    <script src="la-collection-du-ptit-ney.js"></script>
 </body>
 </html>
