--- a/tetris.html
+++ b/tetris.html
@@ -47,7 +47,7 @@ function getRandomInt(min, max) {
 // generate a new tetromino sequence
 // @see https://tetris.fandom.com/wiki/Random_Generator
 function generateSequence() {
-  const sequence = ['I', 'J', 'L', 'O', 'S', 'T', 'Z'];
+  const sequence = ['I', 'J', 'L', 'O', 'S', 'T', 'Z', 'THOSTU'];
 
   while (sequence.length) {
     const rand = getRandomInt(0, sequence.length - 1);
@@ -217,6 +217,15 @@ const tetrominos = {
     [0,1,0],
     [1,1,1],
     [0,0,0],
+  ],
+  'THOSTU': [
+    [1,0,0,1,0,0,1],
+    [0,1,0,1,0,1,0],
+    [0,0,1,1,1,0,0],
+    [0,1,0,1,0,1,0],
+    [0,0,0,1,0,0,0],
+    [1,1,1,1,1,1,1],
+    [0,0,0,0,0,0,0],
   ]
 };
 
@@ -228,7 +237,8 @@ const colors = {
   'S': 'green',
   'Z': 'red',
   'J': 'blue',
-  'L': 'orange'
+  'L': 'orange',
+  'THOSTU': 'white',
 };
 
 let count = 0;
