--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div id="webcam-photo-container" style="display:none">
                 <p>Toi, en train de regarder ce site:</p>
                 <br/>
-                <img id="webcam-photo">
+                <img id="webcam-photo" alt="">
             </div>
         </div>
     </div>
