Add link to snake moyte.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             </div>
         </div>
         <a href="./tetris.html">JOUE A TETRIS MOYTE</a>
+        <a href="./snake/index.html">JOUE A SNAKE MOYTE</a>
         <div class="alex-container">
             <div>
                 <p>Alex en train de faire ce site alors qu'il devrait bosser sur ses exams:</p>
