--- a/gallerie/index.html
+++ b/gallerie/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="item item-2">
                 <img class="img" src="./images/jolyney-head.png" alt="">
-                <p>C'est moi qui ai fait ce dessin!</p>
+                <p class="description">C'est moi qui ai fait ce dessin! T'as vu, il a ete utilise pour le SNAKE MOYTIEN!!</p>
             </div>
             <div class="item item-3">
                 C'est ma meilleure oeuvre
