--- a/gallerie/index.html
+++ b/gallerie/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GALLERIE DE COCONEY</title>
     <link href="./style.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 </head>
 <body>
     <h1>Bienvenue dans la jolie gallerie d'art de Coconey.</h1>
@@ -13,14 +14,16 @@
     <div class="container">
         <div class="gallerie">
             <div class="item item-1">
-                C'est ma meilleure oeuvre
+                <img class="img" src="./images/painting-moytis.png" alt=""/>
+                <p class="description">On commence avec un vrai chef-d'oeuvre. J'ai intitulé cette peinture "Gentil après-midi dans les prés".</p>
             </div>
             <div class="item item-2">
                 <img class="img" src="./images/jolyney-head.png" alt="">
-                <p class="description">C'est moi qui ai fait ce dessin! T'as vu, il a ete utilise pour le SNAKE MOYTIEN!!</p>
+                <p class="description">C'est la tête du Snake!</p>
             </div>
             <div class="item item-3">
-                C'est ma meilleure oeuvre
+                <img class="img" src="./images/starry-night.jpg" alt=""/>
+                <p class="description">T'attarde pas là dessus, c'est une vraie croûte.</p>
             </div>
             <div class="item item-4">
                 C'est ma meilleure oeuvre
