--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
                     <h2>Iolynei se prélasse</h2>
                     <img class="small-img" src="./images/iolynei-plage.png" alt="iolynei plage"/>
                 </div>
+                <div class="news-card">
+                    <a href="./gallerie/index.html">
+                        <img class="coconey" src="./images/coconut.png" alt="">
+                    </a>
+                </div>
             </div>
         </div>
         <canvas id="thostu"></canvas>
