--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <br/>
         <a href="./snake/index.html">JOUE A SNAKE MOYTE</a>
         <div class="alex-container">
-            <div>
+            <!-- <div>
                 <p>Alex en train de faire ce site alors qu'il devrait bosser sur ses exams:</p>
                 <img class="alex-photo" src="./images/alex-photo.jpg" alt="alex"/>
             </div>
@@ -102,13 +102,16 @@
                 <p>Maman:</p>
                 <br>
                 <img class="alex-photo" src="./images/angry-maman.gif" alt="maman enervee"/>
-            </div>
+            </div> -->
             <div id="webcam-photo-container" style="display:none">
                 <p>Toi, en train de regarder ce site:</p>
                 <br/>
                 <img id="webcam-photo" alt="">
             </div>
         </div>
+    </div>
+    <div class="bandeau">
+        Site web fabriqué en une commande : "/touche".
     </div>
     <script src="main.js" type="module"></script>
     <script src="la-collection-du-ptit-ney.js"></script>
