Improve background of gallerie.

--- a/gallerie/index.html
+++ b/gallerie/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 </head>
 <body>
-    <h1>Bienvenue dans la jolie gallerie d'art de Coconey.</h1>
-    <p>Salut, c'est Coconey. Bienvenue dans ma gallerie! C'est ici que je range mes oeuvres d'art. Allez viens, je te montre!</p>
+    <h1 class="center">Bienvenue dans la jolie gallerie d'art de Coconey.</h1>
+    <p class="center">Salut, c'est Coconey. Bienvenue dans ma gallerie! C'est ici que je range mes oeuvres d'art. Allez viens, je te montre!</p>
     <div class="container">
         <div class="gallerie">
             <div class="item item-1">
