Add link to video-place.

--- a/index.html
+++ b/index.html
@@ -72,9 +72,14 @@
             </div>
         </div>
         <canvas id="thostu"></canvas>
-        <div class="foufou">
-            <span class="img-text-1">Heuu qu'est ce qu'ils font?</span>
-            <span class="img-text-2">ARGH!</span>
+        <div class="rows">
+            <div class="foufou">
+                <span class="img-text-1">Heuu qu'est ce qu'ils font?</span>
+                <span class="img-text-2">ARGH!</span>
+            </div>
+            <div class="clique-ici">
+                <a href="./video-place/index.html"><img src="./images/clique-ici.gif" alt="Clique!"></a>
+            </div>
         </div>
         <div class="collection-du-ptit-ney">
             <h2>La collection du ptit ney!</h2>
@@ -94,15 +99,6 @@
         <br/>
         <a href="./snake/index.html">JOUE A SNAKE MOYTE</a>
         <div class="alex-container">
-            <!-- <div>
-                <p>Alex en train de faire ce site alors qu'il devrait bosser sur ses exams:</p>
-                <img class="alex-photo" src="./images/alex-photo.jpg" alt="alex"/>
-            </div>
-            <div>
-                <p>Maman:</p>
-                <br>
-                <img class="alex-photo" src="./images/angry-maman.gif" alt="maman enervee"/>
-            </div> -->
             <div id="webcam-photo-container" style="display:none">
                 <p>Toi, en train de regarder ce site:</p>
                 <br/>
