Open up coconey

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="news-card">
                     <a href="./gallerie/index.html">
-                        <img class="coconey" src="./images/coconut.png" alt="">
+                        <div class="coconey"></div>
                     </a>
                 </div>
             </div>
