--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
         <a href="./tetris.html">JOUE A TETRIS MOYTE</a>
         <br/>
         <a href="./snake/index.html">JOUE A SNAKE MOYTE</a>
+        <br/>
+        <a href="javascript:void(quiz())">JOUE AU GRAND QUIZ MOYTE</a>
         <div class="alex-container">
             <div id="webcam-photo-container" style="display:none">
                 <p>Toi, en train de regarder ce site:</p>
@@ -111,5 +113,6 @@
     </div>
     <script src="main.js" type="module"></script>
     <script src="la-collection-du-ptit-ney.js"></script>
+    <script src="quiz.js"></script>
 </body>
 </html>
