Improve le coin des jeux.

--- a/index.html
+++ b/index.html
@@ -95,11 +95,14 @@
                 <p><i>[ mais cela échoue... ]</i></p>
             </div>
         </div>
-        <a href="./tetris.html">JOUE A TETRIS MOYTE</a>
-        <br/>
-        <a href="./snake/index.html">JOUE A SNAKE MOYTE</a>
-        <br/>
-        <a href="javascript:void(quiz())">JOUE AU GRAND QUIZ MOYTE</a>
+        <div class="jeux-container">
+            <h2>LE COIN DES JEUX</h2>
+            <p>Ici, c'est vraiment le coin préféré de Jolyney!</p>
+            <a class="jeu-button b1" href="./tetris.html">JOUE A TETRIS MOYTE</a>
+            <a class="jeu-button b2" href="./snake/index.html">JOUE A SNAKE MOYTE</a>
+            <a class="jeu-button b3" href="javascript:void(quiz())">JOUE AU GRAND QUIZ MOYTE</a>
+        </div>
+
         <div class="alex-container">
             <div id="webcam-photo-container" style="display:none">
                 <p>Toi, en train de regarder ce site:</p>
