Make rows alined in the center.

--- a/index.html
+++ b/index.html
@@ -98,9 +98,11 @@
         <div class="jeux-container">
             <h2>LE COIN DES JEUX</h2>
             <p>Ici, c'est vraiment le coin préféré de Jolyney!</p>
-            <a class="jeu-button b1" href="./tetris.html">JOUE A TETRIS MOYTE</a>
-            <a class="jeu-button b2" href="./snake/index.html">JOUE A SNAKE MOYTE</a>
-            <a class="jeu-button b3" href="javascript:void(quiz())">JOUE AU GRAND QUIZ MOYTE</a>
+            <div class="rows">
+                <a class="jeu-button b1" href="./tetris.html">JOUE A TETRIS MOYTE</a>
+                <a class="jeu-button b2" href="./snake/index.html">JOUE A SNAKE MOYTE</a>
+                <a class="jeu-button b3" href="javascript:void(quiz())">JOUE AU GRAND QUIZ MOYTE</a>
+            </div>
         </div>
 
         <div class="alex-container">
