Finish the gallerie.

--- a/gallerie/index.html
+++ b/gallerie/index.html
@@ -26,10 +26,12 @@
                 <p class="description">T'attarde pas là dessus, c'est une vraie croûte.</p>
             </div>
             <div class="item item-4">
-                C'est ma meilleure oeuvre
+                <img class="img" src="./images/untitled.png" alt=""/>
+                <p class="description">"La Moyte un matin d'hiver"</p>
             </div>
         </div>
     </div>
+    <p class="center">La visite est terminée.</p>
 
 </body>
 </html>
