Add baby papoum.

--- a/mika.html
+++ b/mika.html
@@ -10,18 +10,20 @@
     <link rel="stylesheet" href="./index.css"/>
 </head>
 <body>
+    <img class="background" src="./images/background-mika.jpg" alt=""/>
     <div class="main">
         <br/>
         <a href="./index.html" class="mika-link">Retours en toute sécurité vers le site de la Moyte (pas de virus, c'est promis).</a>
         <div class="mika-container">
-            <div>
+            <div class="hover-container">
                 <p class="mika-message">Salut Emily, c'est le vrai Mika! Je voulais te souhaiter personellement un super bon anniversaire!<br><br>Allez, A+ dans l'autobus!</p>
+                <img class="baby-papoum" src="./images/baby-papoum.png" alt=""/>
             </div>
             <div>
                 <img id='mika' class="mika-img" src="./images/mika.webp" alt="C'est le vrai Mika!"/>
                 <img id='thost' src="./images/thost.png" style="display:none"/>
                 <img id='dark-thost' src="./images/dark-thost.png" style="display:none"/>
-                <div class="center">Le vrai Mika</div>
+                <div class="center"><span class="white">Le vrai Mika</span></div>
             </div>
         </div>
     </div>
