--- a/theatre/index.html
+++ b/theatre/index.html
@@ -11,8 +11,27 @@
     <img class="background" src="./background.jpg" alt=""/>
     <div class="main">
         <div class="video">
-            
+            <div class="entract cursor" id="start">Bienvenue au théatre de la Moyte, le fameux "Repaire des Artistes"! C'est ici que jouent les plus grands!</div>
+            <video height="280" style="display:none" id="video1">
+                <source src="./act1.mp4">
+            </video>
+            <div class="entract cursor" id="entract1" style="display:none">
+                La moyte est en émoi !
+            </div>
+            <video height="500" style="display:none" id="video2">
+                <source src="./act2.mp4">
+            </video>
+            <div class="entract cursor" id="entract2" style="display:none">
+                Le suspens est insoutenable ! Accrochez-vous pour l'acte final !
+            </div>
+            <video height="500" style="display:none" id="video3">
+                <source src="./act3.mp4">
+            </video>
+            <div class="entract" style="display:none" id="end">
+                Quelle folie ! BRAVOOO ! DU GRAND ART !
+            </div>
         </div>
     </div>
+    <script src="videos.js"></script>
 </body>
 </html>
